k8s/identity-server-4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-server-deployment
  labels:
    app: identity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-server
  template:
    metadata:
      labels:
        app: identity-server
    spec:
      containers:
      - name: identity-server-4
        image: medium.azurecr.io/identity-server-4
        ports:
        - containerPort: 80
