k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: idsvr4-ingress
spec:
  backend:
    serviceName: idsvr4
    servicePort: 80
